assets/css/style.css
/* ... */
/* ---------------------  Animations ----------------*/

.fade-in-1 {
  animation: fadeIn ease-in-out 1.5s;
  -webkit-animation: fadeIn ease-in-out 1.5s;
  -moz-animation: fadeIn ease-in-out 1.5s;
  -o-animation: fadeIn ease-in-out 1.5s;
  -ms-animation: fadeIn ease-in-out 1.5s;
}

.fade-in-3 {
  animation: fadeIn ease-in-out 3s;
  -webkit-animation: fadeIn ease-in-out 3s;
  -moz-animation: fadeIn ease-in-out 3s;
  -o-animation: fadeIn ease-in-out 3s;
  -ms-animation: fadeIn ease-in-out 3s;
}

.fade-in-5 {
  animation: fadeIn ease-in-out 4.5s;
  -webkit-animation: fadeIn ease-in-out 4.5s;
  -moz-animation: fadeIn ease-in-out 4.5s;
  -o-animation: fadeIn ease-in-out 4.5s;
  -ms-animation: fadeIn ease-in-out 4.5s;
}

@keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
    }
}

/* ---------------   Navbar ----------------------------*/

.navbar-nav a {
    font-size: 1.5rem;
    margin: 0 40px;
}

/* ----------------------------------  Sections general  ----------------------------*/

.image-container {
    justify-content: space-evenly;
}

.section-title {
    position: relative;
    top: 20px;
    left: 0;
    text-indent: 2rem;
    width: 100%;
    height: 4rem;

    color: #fafafa;
    text-transform: uppercase;
    font-family: 'Kanit', 'Lato', 'Source Sans Pro', sans-serif;
}

.card-container {
    width: 48%;
    height: 90%;
    float: left;
    padding: 30px 10px 10px 10px;
    text-align: justify;
    margin: 0 10px 0 5px;
    border-radius: 10px;
}

.card-container h4 {
    font-family: "Lato", "Source Sans Pro", "SegoeUI", sans-serif;
}

.section-container {
    height: 100vh;
    width: 100%;
    margin: 0;
    padding-top: 15px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0;
}

.even-distribution {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-evenly;
}

.specs {
    display: inline-block;
    width: 48%;
    min-height: 220px;
    text-align: left;
    padding: 10px;
    box-shadow: 5px 5px 5px #808080;
}

.specs-beginner {
    border: 0 0 #ce8634;
    background-color: #ce8634;
}

.specs-advanced {
    border: 0 0 #6b6cd4;
    background-color: #6e70d6;
}

.font-larger {
    font-size: 1.1rem;
}

/* ----------------------------------  Beginners section   ----------------------------*/

.beginners-image {
    background-image: url("../images/hotel-monochrome.png");
    background-repeat: repeat-y;
}

.skylines-logo {
    height: auto;
    width: 35%;
    float: right;
    margin-left: 15px;
}


.no-decoration {
    list-style-type: none;
}

.logos {
    color: rgb(37, 37, 37);
}

.other-platforms {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#purchase{
    justify-content: space-evenly;
}

.buy {
    height: 80%;
    width: 100%;
}

.buy-caption {
    width: 160px;
    height: 100px;
    text-align: center;
}

.buy-caption a {
    color: #373737;
}

/* ---------------------------right side--------------------*/


.tips {
    min-height: 120px;
}

#start-image {
    height: 120px;
    width: 30%;

    background: url("../images/how-to-start.JPG");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#distrita-image {
    height: 120px;
    width: 30%;

    background: url("../images/distrita-start.JPG");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#wiki-image {
    height: 120px;
    width: 30%;

    background: url("../images/wiki.png");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#playlist-image {
    height: 120px;
    width: 30%;

    background: url("../images/tutorial-playlist.jpg");
    background-repeat:no-repeat;
    background-size: 100% 100%;    
}

.tutorial-title-left {
    font-family: 'Kanit', 'Segoe', 'Verdana', 'Sans-serif';
    text-align: right;
    text-transform: uppercase;
}

.tutorial-title-right {
    font-family: 'Kanit', 'Segoe', 'Verdana', 'Sans-serif';
    text-align: left;
    text-transform: uppercase;
}

.caption-right {
    float: right;
    margin-left: 10px;
}

.caption-left {
    float: left;
    margin-right: 10px;
}

/* ----------------------------------  Advanced section   ----------------------------*/

/* ------------ Left side  ------------*/

.advanced-image {
    background-image: url("../images/vikersund.png");
    background-repeat: repeat-y;
}

.btn-rci {
    border-radius: 5px;
    color: #373737;
    font-family: 'Kanit', 'SegoeUI', sans-serif;
}

.btn-rci:hover {
    color:#fafafa;
}

.btn-residential {
    /*border: 1px solid #1b4d21;*/
    background-color: #318a3d;
}

.btn-commercial {
    /*border: 1px solid #1c1944; */
    background-color: #5e58b4;
}

.btn-industry {
    /*border: 1px solid #61451b; */
    background-color: #ad7b2f;
}

.btn-office {
    /*border: 1px solid #2c6c70;*/
    background-color: #44a8af;
}

/*------------ Right side ---------*/

#workshop-image {
    height: 120px;
    width: 30%;

    background: url("../images/workshop.jpg");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#mods {
  font-family: "Source Sans Pro", "Lato", sans-serif;
  border-collapse: collapse;
  width: 100%;
}

#mods td, #mods th {
  border: 1px solid rgb(23, 23, 51);
  padding: 8px;
  vertical-align: top;
}

td {
    overflow: hidden;
}
td a {
    display: block;
    margin: -10em;
    padding: 10em;
}

td:first-child { 
    font-family: 'Lato', 'Source Sans Pro', sans-serif;
    font-size: 1rem;
    font-weight: bold;
    text-align: left;
    text-transform: uppercase;
    width: 25%;
}

#mods tr:nth-child(even){background-color: rgb(156, 178, 216);}
/* ... */

